--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-slider": "^2.0.6",
     "sass": "^1.69.5",
     "slick-carousel": "^1.8.1"
   },
