--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,30 @@
 {
-  "extends": ["react-app", "react-app/jest"],
+  "extends": ["react-app"],
   "rules": {
     "no-console": "warn",
     "prefer-const": "error",
     "quotes": ["error", "single"],
     "jsx-quotes": ["error", "prefer-single"],
     "indent": ["warn", 2],
-    "max-len": ["error", { "code": 200 }],
+    "max-len": ["error", { "code": 120 }],
     "comma-dangle": ["error", "always-multiline"],
     "semi": ["warn", "always"],
+    "import/order": [
+      "error",
+      {
+        "groups": [
+          "builtin",
+          "external",
+          "internal",
+          "parent",
+          "sibling",
+          "index",
+          "object",
+          "type"
+        ],
+        "newlines-between": "always-and-inside-groups"
+      }
+    ],
     "no-trailing-spaces": "error",
     "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 1 }]
   }
