--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
     "no-console": "warn",
     "prefer-const": "error",
     "quotes": ["error", "single"],
-    "jsx-quotes": ["error", "prefer-single"],
+    "jsx-quotes": ["error", "prefer-double"],
     "indent": ["warn", 2],
     "max-len": ["error", { "code": 120 }],
     "comma-dangle": ["error", "always-multiline"],
